Fixes/collection banner (#291)
* hide readmore if no truncate on collection banner

* rebuild with new assets for collection description changes

--- a/scss/sections/landing-page-review-carousel.scss
+++ b/scss/sections/landing-page-review-carousel.scss
@@ -94,7 +94,7 @@
 			overflow: auto;
 		}
 		@media(--md-large){
-			max-height: 50%;
+			max-height: 10vh;
 		}
 		font-weight: typography.$regular-weight !important;
 	}
